--- a/tests/resources/test_partial_config.yaml
+++ b/tests/resources/test_partial_config.yaml
@@ -1,4 +1,4 @@
-# # For more information on configuration and how to use it:
+# For more information on configuration and how to use it:
 # https://afm-spm.github.io/TopoStats/main/configuration.html
 base_dir: ./ # Directory in which to search for data files
 output_dir: ./output # Directory to output results to
