--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ tests = [
   "pytest-cov",
   "pytest-github-actions-annotate-failures",
   "pytest-mpl",
-  "pytest-regtest",
+  "pytest-regtest==2.3.1",
   "pytest-testmon",
   "filetype",
 ]
