--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -21,14 +21,14 @@ filter:
     above: 1.0 # Threshold for data above the image background
   gaussian_size: 1.0121397464510862 # Gaussian blur intensity in px
   gaussian_mode: nearest
-  # Scar remvoal parameters. Be careful with editing these as making the algorithm too sensitive may
+  # Scar removal parameters. Be careful with editing these as making the algorithm too sensitive may
   # result in ruining legitimate data.
   remove_scars:
     run: false
     removal_iterations: 2 # Number of times to run scar removal.
     threshold_low: 0.250 # lower values make scar removal more sensitive
     threshold_high: 0.666 # lower values make scar removal more sensitive
-    max_scar_width: 4 # Maximum thichness of scars in pixels.
+    max_scar_width: 4 # Maximum thickness of scars in pixels.
     min_scar_length: 16 # Minimum length of scars in pixels.
 grains:
   run: true # Options : true, false
@@ -65,7 +65,7 @@ disordered_tracing:
   mask_smoothing_params:
     gaussian_sigma: 2 # Gaussian smoothing parameter 'sigma' in pixels.
     dilation_iterations: 2 # Number of dilation iterations to use for grain smoothing.
-    holearea_min_max: [0, null] # Range (min, max) of a hole area in nm to refil in the smoothed masks.
+    holearea_min_max: [0, null] # Range (min, max) of a hole area in nm to refill in the smoothed masks.
   skeletonisation_params:
     method: topostats # Options : zhang | lee | thin | topostats
     height_bias: 0.6 # Percentage of lowest pixels to remove each skeletonisation iteration. 1 equates to zhang.
