--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,6 +68,15 @@ repos:
     hooks:
       - id: nbstripout
 
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.9.1
+    hooks:
+      - id: nbqa-black
+      - id: nbqa-check-ast
+      - id: nbqa-flake8
+      - id: nbqa-isort
+      - id: nbqa-pyupgrade
+
   - repo: https://github.com/numpy/numpydoc
     rev: v1.8.0
     hooks:
