--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -21,7 +21,7 @@ body:
       label: Checklist
       description: A Checklist is provided below for you to track each of the subsequent tasks.
       options:
-        - label: Re-run analysis with `topostats process --core 1`.
+        - label: If TopoStats halts processing, re-run analysis with `topostats process --core 1`.
           required: true
         - label: Describe the bug.
           required: true
