--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -195,6 +195,12 @@ coloured_boxes:
   mask_cmap: "rainbow"
   savefig_dpi: 100
   core_set: false
+vetted_tensor:
+  filename: "27-vetted_tensor"
+  title: "Vetted Tensor"
+  image_type: "binary"
+  savefig_dpi: 100
+  core_set: false
 grain_image:
   image_type: "non-binary"
   savefig_dpi: 100
