--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -195,9 +195,21 @@ coloured_boxes:
   mask_cmap: "rainbow"
   savefig_dpi: 100
   core_set: false
+unet_tensor:
+  filename: "27-unet_tensor"
+  title: "U-Net Tensor"
+  image_type: "binary"
+  savefig_dpi: 100
+  core_set: false
 vetted_tensor:
-  filename: "27-vetted_tensor"
+  filename: "28-vetted_tensor"
   title: "Vetted Tensor"
+  image_type: "binary"
+  savefig_dpi: 100
+  core_set: false
+merged_classes_tensor:
+  filename: "29-merged_classes_tensor"
+  title: "Merged Classes Tensor"
   image_type: "binary"
   savefig_dpi: 100
   core_set: false
