docs: Rounding out documentation
- Fixes some internal links that were wrong
- Adds a page on Matplotlib Style
- Tweaks advice in `topostats/topostats.mplstyle` on usage
- Adds `--unsafe` flat to `check-yaml` pre-commit hook so it doesn't complain about Mermaid config in `mkdocs.yaml`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - usage/index.md
       - usage/configuration.md
       - usage/notebooks.md
+      - usage/mtaplotlib-style.md
       - usage/data_dictionary.md
       - usage/workflow.md
   - Related Software: related_software.md
