style: Linting spelling error; codespell ignore 'OT'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -256,6 +256,7 @@ fixture-parentheses = true
 skip = '*.spm*,*.mplstyle,*.svg'
 count = ''
 quiet-level = 3
+ignore-words-list = 'OT'
 
 [tool.numpydoc_validation]
 checks = [
