--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -51,6 +51,8 @@ grains:
     model_path: null # Path to a trained U-Net model
     upper_norm_bound: 5.0 # Upper bound for normalisation of input data. This should be slightly higher than the maximum desired / expected height of grains.
     lower_norm_bound: -1.0 # Lower bound for normalisation of input data. This should be slightly lower than the minimum desired / expected height of the background.
+    remove_grains_not_connected_to_original_grain: true # Whether to remove extra detected grains that are not connected to the original grain
+    # remove_edge_intersecting_grains: true # Whether to remove grains that touch the image border - warning, this might remove the original grain if the new mask touches the border
   vetting:
     class_conversion_size_thresholds: null # Class conversion size thresholds, list of tuples of 3 integers and 2 integers, ie list[tuple[tuple[int, int, int], tuple[int, int]]] eg [[[1, 2, 3], [5, 10]]] for each region of class 1 to convert to 2 if smaller than 5 nm^2 and to class 3 if larger than 10 nm^2.
     class_region_number_thresholds: null # Class region number thresholds, list of lists, ie [[class, low, high],] eg [[1, 2, 4], [2, 1, 1]] for class 1 to have 2-4 regions and class 2 to have 1 region. Can use None to not set an upper/lower bound.
