tests(jpk): Updates sum of images loaded from JPK
Closes #1110

In light of the changes to AFMReader which modified the scaling the sum of the arrays of the `.jpk` test files needed
updating here too.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ keywords = [
 requires-python = ">=3.9, <3.12"
 dependencies = [
   "art",
-  "AFMReader @ git+https://github.com/AFM-SPM/AFMReader@1f03159edae2e906cb709ad9949d7b6d460cd1a9",
+  "AFMReader @ git+https://github.com/AFM-SPM/AFMReader@main",
   "h5py",
   "keras",
   "matplotlib~=3.9.4",
