--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -35,11 +35,11 @@ grains:
   threshold_method: std_dev # Options : std_dev, otsu, absolute, unet
   otsu_threshold_multiplier: 1.0
   threshold_std_dev:
-    below: 10.0 # Threshold for grains below the image background
-    above: 1.0 # Threshold for grains above the image background
+    below: [10.0] # Thresholds for grains below the image background. List[float].
+    above: [1.0] # Thresholds for grains above the image background. List[float].
   threshold_absolute:
-    below: -1.0 # Threshold for grains below the image background
-    above: 1.0 # Threshold for grains above the image background
+    below: [-1.0] # Thresholds for grains below the image background. List[float].
+    above: [1.0] # Thresholds for grains above the image background. List[float].
   direction: above # Options: above, below, both (defines whether to look for grains above or below thresholds or both)
   absolute_area_threshold:
     above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
