style(test_processing): Adds pytest.param( id="")
The `test_save_cropped_grains()` is parameterised but each set of parameters was missing `pytest.param(... id="")` so
I've added these.

Also includes an additional line in the table at the top of `topostats/plotting_dictionary.yaml` which indicates what
the newly introduced `module` key/value pair represents.

--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -11,6 +11,7 @@
 # | image_type   | String  | Whether the plot includes the height (non-binary) or the outline (binary)    |
 # | savefig_dpi  | int     | Dots Per Inch for plotting                                                   |
 # | core_set     | Boolean | Whether a plot is considered part of the core set of images that are plotted.|
+# | module       | str     | The module an image belongs to                                               |
 
 # Flattening Troubleshooting Images
 extracted_channel:
