--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -83,6 +83,7 @@ disordered_tracing:
     height_threshold: # The height to remove branches below.
     method_values: mid # The method to obtain a branch's height for pruning. Options : min | median | mid.
     method_outlier: mean_abs # The method to prune branches based on height. Options : abs | mean_abs | iqr.
+    only_height_prune_endpoints: False # Whether to restrict height-based pruning to skeleton segments containing an endpoint or not.
 nodestats:
   run: true # Options : true, false
   node_joining_length: 7.0 # The distance in nanometres over which to join nearby crossing points.
