--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -108,7 +108,16 @@ plotting:
   savefig_format: null # Options : null, png, svg or pdf. tif is also available although no metadata will be saved. (defaults to png) See https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.savefig.html
   savefig_dpi: 100 # Options : null (defaults to the value in topostats/plotting_dictionary.yaml), see https://afm-spm.github.io/TopoStats/main/configuration.html#further-customisation and https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.savefig.html
   pixel_interpolation: null # Options : https://matplotlib.org/stable/gallery/images_contours_and_fields/interpolation_methods.html
-  image_set: [core] # Options : all, core, multiples of: filters, grains, disordered_tracing, nodestats, ordered_tracing, splining
+  image_set: # Options : all, core, filters, grains, grain_crops, disordered_tracing, nodestats, ordered_tracing, splining. Uncomment to include
+    # - all
+    - core
+    # - filters
+    # - grains
+    # - grain_crops
+    # - disordered_tracing
+    # - nodestats
+    # - ordered_tracing
+    # - splining
   zrange: [null, null] # low and high height range for core images (can take [null, null]). low <= high
   colorbar: true # Options : true, false
   axes: true # Options : true, false (due to off being a bool when parsed)
