--- a/topostats/simple_config.yaml
+++ b/topostats/simple_config.yaml
@@ -30,7 +30,7 @@ grains:
   threshold_absolute:
     below: -1.0 # Threshold for grains below the image background
     above: 1.0 # Threshold for grains above the image background
-  absolute_area_threshold:
+  area_thresholds:
     above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
 grainstats:
   run: true # Options : true, false
