--- a/pyproject.toml
+++ b/pyproject.toml
@@ -253,7 +253,7 @@ convention = "numpy"
 fixture-parentheses = true
 
 [tool.codespell]
-skip = '*.spm*,*.mplstyle,*.svg'
+skip = '*.spm*,*.mplstyle,*.svg,*.stp,*.top'
 count = ''
 quiet-level = 3
 ignore-words-list = 'OT'
