Add unet confidence as a configurable parameter

--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -50,6 +50,7 @@ grains:
     upper_norm_bound: 5.0 # Upper bound for normalisation of input data. This should be slightly higher than the maximum desired / expected height of grains.
     lower_norm_bound: -1.0 # Lower bound for normalisation of input data. This should be slightly lower than the minimum desired / expected height of the background.
     remove_disconnected_grains: false # Whether to remove grains in the crop that don't touch the original grain mask.
+    confidence: 0.5 # Confidence threshold for the UNet model. Smaller is more generous, larger is more strict.
   vetting:
     whole_grain_size_thresholds: null # Size thresholds for whole grains in nanometres squared, ie all classes combined. Tuple of 2 floats, ie [low, high] eg [100, 1000] for grains to be between 100 and 1000 nm^2. Can use None to not set an upper/lower bound.
     class_conversion_size_thresholds: null # Class conversion size thresholds, list of tuples of 3 integers and 2 integers, ie list[tuple[tuple[int, int, int], tuple[int, int]]] eg [[[1, 2, 3], [5, 10]]] for each region of class 1 to convert to 2 if smaller than 5 nm^2 and to class 3 if larger than 10 nm^2.
