feature(io): Detect old Bruker files when searching for .spm
Closes #1181

- Includes old format bruker file extensions (`.001`, `.002`, `.###`) when `file_ext: spm` in configuration file (or explicitly on the command line with `topostats --file-ext spm`)
- Parameterizes `tests.test_io.test_find_files()` to check all supported file formats are found.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -253,7 +253,7 @@ convention = "numpy"
 fixture-parentheses = true
 
 [tool.codespell]
-skip = '*.spm*,*.mplstyle,*.svg,*.stp,*.top'
+skip = '*.spm*,*.mplstyle,*.svg,*.stp,*.top,*.002,*.004'
 count = ''
 quiet-level = 3
 ignore-words-list = 'OT'
