--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,7 +123,7 @@ write_to = "topostats/_version.py"
 
 [tool.pytest.ini_options]
 minversion = "8.0"
-addopts = ["--cov", "--mpl", "-ra", "--strict-config", "--strict-markers", "--numprocesses=auto"]
+addopts = ["--cov", "--mpl", "-ra", "--strict-config", "--strict-markers"]
 log_level = "INFO"
 log_cli = true
 log_cli_level = "INFO"
